# todolist

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  README_INSTALL.md  resources.qrc  tasks.md
assets/icons/: app.icns
flux/changes/20260618_todolist-app/: .flux-impl-state.json  data-model.md  plan.md  proposal.md  quickstart.md  research.md  spec.md  tasks.md
flux/changes/20260618_todolist-app/contracts/: data-persistence.md  github-api.md  qml-cpp-bridge.md  service-interfaces.md
src/: main.cpp
src/business/: ConfigService.cpp  ConfigService.h  ReminderService.cpp  ReminderService.h  StatsService.cpp  StatsService.h  SyncService.cpp  SyncService.h  SystemTrayManager.cpp  SystemTrayManager.h  ThemeService.cpp  ThemeService.h  TodoService.cpp  TodoService.h
src/business/interfaces/: IConfigService.h  IDatabaseManager.h  IGitClient.h  IJsonSerializer.h  IReminderService.h  IStatsService.h  ISyncService.h  IThemeService.h  ITodoService.h
src/data/: DatabaseManager.cpp  DatabaseManager.h  EncryptionUtil.cpp  EncryptionUtil.h  GitClient.cpp  GitClient.h  GitHubApiClient.cpp  GitHubApiClient.h  JsonSerializer.cpp  JsonSerializer.h
src/models/: Category.cpp  Category.h  Config.cpp  Config.h  Todo.cpp  Todo.h  TodoListModel.cpp  TodoListModel.h
src/qml/: main.qml
src/qml/components/: CalendarTaskView.qml  ConflictResolutionDialog.qml  DateReviewDialog.qml  GitHubSettings.qml  SyncStatusPanel.qml  TodoForm.qml  TodoItem.qml  WidgetView.qml  WidgetWindow.qml  qmldir
